[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esmecata"
dynamic = ["version"]
authors = [{name = "AuReMe", email = "gem-aureme@inria.fr"}]
readme = "README.md"
description = "EsMeCaTa: Estimating Metabolic Capabilties from Taxonomy"
license = {text = "GPL-3.0-or-later"}

dependencies = [
  'biopython',
  'bioservices',
  'matplotlib',
  'pandas',
  'requests',
  'ete3',
  'seaborn',
  'SPARQLWrapper'
]

[project.scripts]
esmecata = "esmecata.__main__:main"
esmecata_analysis = "esmecata.__main_analysis__:main"

[project.urls]
Homepage = "https://github.com/AuReMe/esmecata"
Changelog = "https://github.com/AuReMe/esmecata/blob/main/CHANGELOG.md"

[project.optional-dependencies]
ANALYSIS = ['datapane',
  'plotly',
  'kaleido',
  'ontosunburst'
]

[tool.setuptools]
packages = ['esmecata']
package-dir = {'esmecata' = 'esmecata', 'esmecata.esmecata' = 'esmecata/esmecata' , 'esmecata.esmecata_analysis' = 'esmecata/esmecata_analysis'}

[tool.setuptools.dynamic]
version = { attr = "esmecata.__version__" }
dependencies = {file = ["requirements.txt"]}
